--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
     "mongoose": "^6.5.2"
   },
